<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
  <string name="app_name">Snake</string>
  <string name="mode_ready">Snake\nPress Up To Play</string>
  <string name="mode_pause">Paused\nPress Up To Resume</string>
  <string name="mode_lose">Game Over\nScore: %1$d \nPress Up To Play</string>
  <string name="resume_button">Resume</string>
  <string name="change_speed_button">Change Speed</string>
  <string name="settings_button">Settings</string>
  <string name="slow_button">Slow</string>
  <string name="medium_button">Medium</string>
  <string name="fast_button">Fast</string>
</resources>
